--- a/content/resources/mit21g_114s05_2_03f.md
+++ b/content/resources/mit21g_114s05_2_03f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/9ccd4648f70f4c98394598c0052c779a_MIT21G_114S05_2_03f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/9ccd4648f70f4c98394598c0052c779a_MIT21G_114S05_2_03f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 9ccd4648-f70f-4c98-3945-98c0052c779a
