--- a/content/resources/mit21g_114s05_2_07f.md
+++ b/content/resources/mit21g_114s05_2_07f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/611c1d0c59b102ba3a69a8fcb21f6c0a_MIT21G_114S05_2_07f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/611c1d0c59b102ba3a69a8fcb21f6c0a_MIT21G_114S05_2_07f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 611c1d0c-59b1-02ba-3a69-a8fcb21f6c0a
