--- a/content/resources/mit21g_114s05_2_10j.md
+++ b/content/resources/mit21g_114s05_2_10j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/bd4db22776af728dc9f5561262c199d0_MIT21G_114S05_2_10j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/bd4db22776af728dc9f5561262c199d0_MIT21G_114S05_2_10j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: bd4db227-76af-728d-c9f5-561262c199d0
