--- a/content/resources/mit21g_114s05_2_22f.md
+++ b/content/resources/mit21g_114s05_2_22f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/0b83bd2c9fbda3acd9c429b158c2cc7b_MIT21G_114S05_2_22f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/0b83bd2c9fbda3acd9c429b158c2cc7b_MIT21G_114S05_2_22f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 0b83bd2c-9fbd-a3ac-d9c4-29b158c2cc7b
