--- a/content/resources/mit21g_114s05_2_24f.md
+++ b/content/resources/mit21g_114s05_2_24f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/79783461c798f6144fce303f973fe266_MIT21G_114S05_2_24f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/79783461c798f6144fce303f973fe266_MIT21G_114S05_2_24f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 79783461-c798-f614-4fce-303f973fe266
