--- a/content/resources/mit21g_114s05_2_24j.md
+++ b/content/resources/mit21g_114s05_2_24j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/90b346797217b64aa6b923a3f25116a7_MIT21G_114S05_2_24j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/90b346797217b64aa6b923a3f25116a7_MIT21G_114S05_2_24j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 90b34679-7217-b64a-a6b9-23a3f25116a7
