--- a/content/resources/mit21g_114s05_2_28f.md
+++ b/content/resources/mit21g_114s05_2_28f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/cf4ba944f0edabd84b05183cf15a3d5f_MIT21G_114S05_2_28f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/cf4ba944f0edabd84b05183cf15a3d5f_MIT21G_114S05_2_28f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: cf4ba944-f0ed-abd8-4b05-183cf15a3d5f
