--- a/content/resources/mit21g_114s05_3_07f.md
+++ b/content/resources/mit21g_114s05_3_07f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/929607b374652bffba84e55d9c876df6_MIT21G_114S05_3_07f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/929607b374652bffba84e55d9c876df6_MIT21G_114S05_3_07f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 929607b3-7465-2bff-ba84-e55d9c876df6
