--- a/content/resources/mit21g_114s05_3_07j.md
+++ b/content/resources/mit21g_114s05_3_07j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/1a31a14e5ba5994824bd655334314e8b_MIT21G_114S05_3_07j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/1a31a14e5ba5994824bd655334314e8b_MIT21G_114S05_3_07j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 1a31a14e-5ba5-9948-24bd-655334314e8b
