--- a/content/resources/mit21g_114s05_3_16f.md
+++ b/content/resources/mit21g_114s05_3_16f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/6aee5f8dcd2eca9d90b2cd88fa64a5d1_MIT21G_114S05_3_16f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/6aee5f8dcd2eca9d90b2cd88fa64a5d1_MIT21G_114S05_3_16f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 6aee5f8d-cd2e-ca9d-90b2-cd88fa64a5d1
