--- a/content/resources/mit21g_114s05_3_31f.md
+++ b/content/resources/mit21g_114s05_3_31f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/63343de9cf3dbac49e83ab503d3a2041_MIT21G_114S05_3_31f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/63343de9cf3dbac49e83ab503d3a2041_MIT21G_114S05_3_31f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 63343de9-cf3d-bac4-9e83-ab503d3a2041
