--- a/content/resources/mit21g_114s05_3_31j.md
+++ b/content/resources/mit21g_114s05_3_31j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/1b8c23758182c61efb57ab6423aea56e_MIT21G_114S05_3_31j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/1b8c23758182c61efb57ab6423aea56e_MIT21G_114S05_3_31j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 1b8c2375-8182-c61e-fb57-ab6423aea56e
