--- a/content/resources/mit21g_114s05_4_04f.md
+++ b/content/resources/mit21g_114s05_4_04f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/9154267fc172ca6b0b2ad004bf472e3d_MIT21G_114S05_4_04f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/9154267fc172ca6b0b2ad004bf472e3d_MIT21G_114S05_4_04f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 9154267f-c172-ca6b-0b2a-d004bf472e3d
