--- a/content/resources/mit21g_114s05_4_04j.md
+++ b/content/resources/mit21g_114s05_4_04j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/7431f87fe677a8b225e7ad5589956f97_MIT21G_114S05_4_04j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/7431f87fe677a8b225e7ad5589956f97_MIT21G_114S05_4_04j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 7431f87f-e677-a8b2-25e7-ad5589956f97
