--- a/content/resources/mit21g_114s05_4_06f_2.md
+++ b/content/resources/mit21g_114s05_4_06f_2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/6f0a75e038dcc775f75a5e1714060994_MIT21G_114S05_4_06f_2.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/6f0a75e038dcc775f75a5e1714060994_MIT21G_114S05_4_06f_2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 6f0a75e0-38dc-c775-f75a-5e1714060994
