--- a/content/resources/mit21g_114s05_4_13j.md
+++ b/content/resources/mit21g_114s05_4_13j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/03785814c5de70c014beaaec1b4825dc_MIT21G_114S05_4_13j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/03785814c5de70c014beaaec1b4825dc_MIT21G_114S05_4_13j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 03785814-c5de-70c0-14be-aaec1b4825dc
