--- a/content/resources/mit21g_114s05_4_14f.md
+++ b/content/resources/mit21g_114s05_4_14f.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/073296f2b4e74150aa3ff9697b6fc2c9_MIT21G_114S05_4_14f.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/073296f2b4e74150aa3ff9697b6fc2c9_MIT21G_114S05_4_14f.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: www
 uid: 073296f2-b4e7-4150-aa3f-f9697b6fc2c9
