--- a/content/resources/mit21g_114s05_4_14j.md
+++ b/content/resources/mit21g_114s05_4_14j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/14c75194e37c324c8ac65f5fb084535f_MIT21G_114S05_4_14j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/14c75194e37c324c8ac65f5fb084535f_MIT21G_114S05_4_14j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 14c75194-e37c-324c-8ac6-5f5fb084535f
