--- a/content/resources/mit21g_114s05_4_21j.md
+++ b/content/resources/mit21g_114s05_4_21j.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-114-chinese-vi-streamlined-spring-2005/6c54eb00a4516f89806e04cd5fac7873_MIT21G_114S05_4_21j.pdf
+file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/6c54eb00a4516f89806e04cd5fac7873_MIT21G_114S05_4_21j.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: http://www
 uid: 6c54eb00-a451-6f89-806e-04cd5fac7873
