--- a/content/resources/21g-114s05.md
+++ b/content/resources/21g-114s05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: "\u4ECA\u5929. Today. Image by MIT OpenCourseWare."
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/89ad7794768c2e1f2fdb7a06d1fecd1f_21g-114s05.jpg
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/89ad7794768c2e1f2fdb7a06d1fecd1f_21g-114s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "\u4ECA\u5929. Today. (Image by MIT OpenCourseWare.)"
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 21g-114s05.jpg
 uid: 89ad7794-768c-2e1f-2fdb-7a06d1fecd1f
 ---
+今天. Today. Image by MIT OpenCourseWare.
+
