--- a/content/resources/mit21g_114s05_2_03j.md
+++ b/content/resources/mit21g_114s05_2_03j.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/1a175c236bc4ea2e123234a05af7256a_MIT21G_114S05_2_03j.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/1a175c236bc4ea2e123234a05af7256a_MIT21G_114S05_2_03j.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: http://www
 uid: 1a175c23-6bc4-ea2e-1232-34a05af7256a
