--- a/content/resources/mit21g_114s05_2_07j.md
+++ b/content/resources/mit21g_114s05_2_07j.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/bf29c286035c2c7a00133ca6e3be3d24_MIT21G_114S05_2_07j.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/bf29c286035c2c7a00133ca6e3be3d24_MIT21G_114S05_2_07j.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: http://www
 uid: bf29c286-035c-2c7a-0013-3ca6e3be3d24
