--- a/content/resources/mit21g_114s05_2_10f.md
+++ b/content/resources/mit21g_114s05_2_10f.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/b832b1a819536d749cf49ce067cfdf5c_MIT21G_114S05_2_10f.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/b832b1a819536d749cf49ce067cfdf5c_MIT21G_114S05_2_10f.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: www
 uid: b832b1a8-1953-6d74-9cf4-9ce067cfdf5c
