--- a/content/resources/mit21g_114s05_2_28j.md
+++ b/content/resources/mit21g_114s05_2_28j.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/2bdf4afacdbb3d78b764394ae3b8f34f_MIT21G_114S05_2_28j.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/2bdf4afacdbb3d78b764394ae3b8f34f_MIT21G_114S05_2_28j.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: http://www
 uid: 2bdf4afa-cdbb-3d78-b764-394ae3b8f34f
