--- a/content/resources/mit21g_114s05_3_07f.md
+++ b/content/resources/mit21g_114s05_3_07f.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/929607b374652bffba84e55d9c876df6_MIT21G_114S05_3_07f.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/929607b374652bffba84e55d9c876df6_MIT21G_114S05_3_07f.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: www
 uid: 929607b3-7465-2bff-ba84-e55d9c876df6
