--- a/content/resources/mit21g_114s05_3_31j.md
+++ b/content/resources/mit21g_114s05_3_31j.md
@@ -1,13 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/21g-114-chinese-vi-streamlined-spring-2005/1b8c23758182c61efb57ab6423aea56e_MIT21G_114S05_3_31j.pdf
+file: /courses/21g-114-chinese-vi-streamlined-spring-2005/1b8c23758182c61efb57ab6423aea56e_MIT21G_114S05_3_31j.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: f20dcab0-33fe-ed54-fc46-e61243f9dd19
 resourcetype: Document
 title: http://www
 uid: 1b8c2375-8182-c61e-fb57-ab6423aea56e
