--- a/content/resources/21g-114s05-th.md
+++ b/content/resources/21g-114s05-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: Image by MIT OpenCourseWare.
   image-alt: The word 'Today' written in both Chinese and English.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-114s05-th.jpg
 uid: 8e58764e-2047-86ad-452e-fa84efcb1eb5
 ---
 今天. Today. Image by MIT OpenCourseWare.
-
