--- a/content/resources/21g-114s05.md
+++ b/content/resources/21g-114s05.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: Image by MIT OpenCourseWare.
   image-alt: The word 'Today' written in both Chinese and English.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-114s05.jpg
 uid: 89ad7794-768c-2e1f-2fdb-7a06d1fecd1f
 ---
 今天. Today. Image by MIT OpenCourseWare.
-
