--- a/content/resources/mit21g_114s05_3_16f.md
+++ b/content/resources/mit21g_114s05_3_16f.md
@@ -5,6 +5,7 @@ file: /courses/21g-114-chinese-vi-streamlined-spring-2005/6aee5f8dcd2eca9d90b2cd
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
