--- a/content/resources/mit21g_114s05_4_14f.md
+++ b/content/resources/mit21g_114s05_4_14f.md
@@ -5,6 +5,7 @@ file: /courses/21g-114-chinese-vi-streamlined-spring-2005/073296f2b4e74150aa3ff9
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
