Sync all content

--- a/content/resources/mit21g_114s05_2_10f.md
+++ b/content/resources/mit21g_114s05_2_10f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/b832b1a819536d749cf49ce067cfdf5c_MIT21G_114S05_2_10f.pdf
+file_size: 116508
 file_type: application/pdf
 learning_resource_types:
 - Assignments
