--- a/content/resources/mit21g_114s05_4_13j.md
+++ b/content/resources/mit21g_114s05_4_13j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/03785814c5de70c014beaaec1b4825dc_MIT21G_114S05_4_13j.pdf
+file_size: 116272
 file_type: application/pdf
 learning_resource_types:
 - Assignments
