--- a/content/resources/mit21g_114s05_2_03f.md
+++ b/content/resources/mit21g_114s05_2_03f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/9ccd4648f70f4c98394598c0052c779a_MIT21G_114S05_2_03f.pdf
+file_size: 158432
 file_type: application/pdf
 learning_resource_types:
 - Assignments
