--- a/content/resources/mit21g_114s05_2_07f.md
+++ b/content/resources/mit21g_114s05_2_07f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/611c1d0c59b102ba3a69a8fcb21f6c0a_MIT21G_114S05_2_07f.pdf
+file_size: 117705
 file_type: application/pdf
 learning_resource_types:
 - Assignments
