--- a/content/resources/mit21g_114s05_2_07j.md
+++ b/content/resources/mit21g_114s05_2_07j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/bf29c286035c2c7a00133ca6e3be3d24_MIT21G_114S05_2_07j.pdf
+file_size: 115588
 file_type: application/pdf
 learning_resource_types:
 - Assignments
