--- a/content/resources/mit21g_114s05_2_10j.md
+++ b/content/resources/mit21g_114s05_2_10j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/bd4db22776af728dc9f5561262c199d0_MIT21G_114S05_2_10j.pdf
+file_size: 114225
 file_type: application/pdf
 learning_resource_types:
 - Assignments
