--- a/content/resources/mit21g_114s05_2_22j.md
+++ b/content/resources/mit21g_114s05_2_22j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/3bf1fccbe3d046c82c7027ebf41c3ad3_MIT21G_114S05_2_22j.pdf
+file_size: 116643
 file_type: application/pdf
 learning_resource_types:
 - Assignments
