--- a/content/resources/mit21g_114s05_2_24f.md
+++ b/content/resources/mit21g_114s05_2_24f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/79783461c798f6144fce303f973fe266_MIT21G_114S05_2_24f.pdf
+file_size: 152360
 file_type: application/pdf
 learning_resource_types:
 - Assignments
