--- a/content/resources/mit21g_114s05_2_24j.md
+++ b/content/resources/mit21g_114s05_2_24j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/90b346797217b64aa6b923a3f25116a7_MIT21G_114S05_2_24j.pdf
+file_size: 125753
 file_type: application/pdf
 learning_resource_types:
 - Assignments
