--- a/content/resources/mit21g_114s05_2_28f.md
+++ b/content/resources/mit21g_114s05_2_28f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/cf4ba944f0edabd84b05183cf15a3d5f_MIT21G_114S05_2_28f.pdf
+file_size: 121892
 file_type: application/pdf
 learning_resource_types:
 - Assignments
