--- a/content/resources/mit21g_114s05_3_07f.md
+++ b/content/resources/mit21g_114s05_3_07f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/929607b374652bffba84e55d9c876df6_MIT21G_114S05_3_07f.pdf
+file_size: 140236
 file_type: application/pdf
 learning_resource_types:
 - Assignments
