--- a/content/resources/mit21g_114s05_3_16j.md
+++ b/content/resources/mit21g_114s05_3_16j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/6d181b8a817bdf69a10944aad5a86ccb_MIT21G_114S05_3_16j.pdf
+file_size: 120073
 file_type: application/pdf
 learning_resource_types:
 - Assignments
