--- a/content/resources/mit21g_114s05_3_31f.md
+++ b/content/resources/mit21g_114s05_3_31f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/63343de9cf3dbac49e83ab503d3a2041_MIT21G_114S05_3_31f.pdf
+file_size: 107754
 file_type: application/pdf
 learning_resource_types:
 - Assignments
