--- a/content/resources/mit21g_114s05_4_04f.md
+++ b/content/resources/mit21g_114s05_4_04f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/9154267fc172ca6b0b2ad004bf472e3d_MIT21G_114S05_4_04f.pdf
+file_size: 125401
 file_type: application/pdf
 learning_resource_types:
 - Assignments
