--- a/content/resources/mit21g_114s05_4_06f_1.md
+++ b/content/resources/mit21g_114s05_4_06f_1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/5bf220a186521cea23176a8875f72705_MIT21G_114S05_4_06f_1.pdf
+file_size: 109567
 file_type: application/pdf
 learning_resource_types:
 - Assignments
