--- a/content/resources/mit21g_114s05_4_06f_2.md
+++ b/content/resources/mit21g_114s05_4_06f_2.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/6f0a75e038dcc775f75a5e1714060994_MIT21G_114S05_4_06f_2.pdf
+file_size: 112706
 file_type: application/pdf
 learning_resource_types:
 - Assignments
