--- a/content/resources/mit21g_114s05_4_06j_2.md
+++ b/content/resources/mit21g_114s05_4_06j_2.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/510ca792cafa01aa137ddbf8f735c144_MIT21G_114S05_4_06j_2.pdf
+file_size: 109658
 file_type: application/pdf
 learning_resource_types:
 - Assignments
