--- a/content/resources/mit21g_114s05_4_14f.md
+++ b/content/resources/mit21g_114s05_4_14f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/073296f2b4e74150aa3ff9697b6fc2c9_MIT21G_114S05_4_14f.pdf
+file_size: 109898
 file_type: application/pdf
 learning_resource_types:
 - Assignments
