--- a/content/resources/mit21g_114s05_4_14j.md
+++ b/content/resources/mit21g_114s05_4_14j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/14c75194e37c324c8ac65f5fb084535f_MIT21G_114S05_4_14j.pdf
+file_size: 107146
 file_type: application/pdf
 learning_resource_types:
 - Assignments
