--- a/content/resources/mit21g_114s05_4_21f.md
+++ b/content/resources/mit21g_114s05_4_21f.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/99833bb232ccd773ec99051aed77e07c_MIT21G_114S05_4_21f.pdf
+file_size: 127674
 file_type: application/pdf
 learning_resource_types:
 - Assignments
