--- a/content/resources/mit21g_114s05_4_21j.md
+++ b/content/resources/mit21g_114s05_4_21j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/6c54eb00a4516f89806e04cd5fac7873_MIT21G_114S05_4_21j.pdf
+file_size: 122989
 file_type: application/pdf
 learning_resource_types:
 - Assignments
