--- a/content/resources/mit21g_114s05_4_25j.md
+++ b/content/resources/mit21g_114s05_4_25j.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-114-chinese-vi-streamlined-spring-2005/bdbb63429cc61e6ee93df2da576e9fb7_MIT21G_114S05_4_25j.pdf
+file_size: 120020
 file_type: application/pdf
 learning_resource_types:
 - Assignments
